--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 <body>
     <h1>Electron Auto Update Example</h1>
+    <h2>The new version is here!!</h2>
     <p id="version"></p>
     <div id="notification" class="hidden">
         <p id="message"></p>
