--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         const message = document.getElementById('message');
         const restartButton = document.getElementById('restart-button');
         ipcRenderer.on('update_available', () => {
+            console.log('heree');
             ipcRenderer.removeAllListeners('update_available');
             message.innerText = 'A new update is available. Downloading now...';
             notification.classList.remove('hidden');
