--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <body>
     <h1>Electron Auto Update Example</h1>
     <h2>The new version is here!!</h2>
+    <h3>Ya Raaaab</h3>
     <p id="version"></p>
     <div id="notification" class="hidden">
         <p id="message"></p>
