--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <h1>Electron Auto Update Example</h1>
     <h2>The new version is here!!</h2>
     <h3>Ya Raaaab</h3>
+    <h4>Ya mosahel el 7al yarab</h4>
     <p id="version"></p>
     <div id="notification" class="hidden">
         <p id="message"></p>
