--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 </head>
 
 <body>
-    <h1 id="title">Electron Auto Update Example</h1>
+    <h1>Desktop Uploader</h1>
+    <h2 id="title">Electron Auto Update Example</h2>
     <p id="version"></p>
     <script>
         const { ipcRenderer } = require('electron');
